--- a/wp7-donor/Donor/packages.config
+++ b/wp7-donor/Donor/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Newtonsoft.Json" version="4.0.8" />
   <package id="parse" version="0.4" />
+  <package id="SilverlightToolkitWP" version="4.2011.12.14" />
 </packages>
