--- a/wp7-donor/Donor/packages.config
+++ b/wp7-donor/Donor/packages.config
@@ -3,4 +3,5 @@
   <package id="Newtonsoft.Json" version="4.5.6" />
   <package id="parse" version="0.4.1" />
   <package id="SilverlightToolkitWP" version="4.2011.12.14" />
+  <package id="WPExtensions" version="1.3.7" />
 </packages>
