--- a/wp7-donor/Donor/packages.config
+++ b/wp7-donor/Donor/packages.config
@@ -3,6 +3,7 @@
   <package id="MSPToolkit" version="1.5.18" />
   <package id="Newtonsoft.Json" version="4.5.6" />
   <package id="parse" version="0.4.1" />
+  <package id="RestSharp" version="103.1" />
   <package id="SilverlightToolkitWP" version="4.2011.12.14" />
   <package id="WPExtensions" version="1.3.7" />
 </packages>
