--- a/wp7-donor/Donor/packages.config
+++ b/wp7-donor/Donor/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Coding4Fun.Phone.Controls.Complete" version="1.5.6" />
   <package id="MSPToolkit" version="1.5.18" />
   <package id="Newtonsoft.Json" version="4.5.6" />
   <package id="parse" version="0.4.1" />
