--- a/wp7-donor/Donor/Donor.csproj
+++ b/wp7-donor/Donor/Donor.csproj
@@ -244,6 +244,7 @@
     <Content Include="icons\appbar.save.rest.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="icons\appbar.cancel.png" />
     <Content Include="images\drop.png" />
     <Content Include="images\h.png" />
     <Content Include="images\x.png" />
