--- a/wp7-donor/Donor/Donor.csproj
+++ b/wp7-donor/Donor/Donor.csproj
@@ -260,9 +260,9 @@
     <Resource Include="images\ic_menu_news_normal.png" />
     <Resource Include="images\ic_menu_profile_normal.png" />
     <Resource Include="images\ic_menu_stantion_normal.png" />
-    <Resource Include="images\logo.png" />
+    <Resource Include="images\logo_old_one.png" />
     <Resource Include="bg.png" />
-    <Resource Include="bg_04.png">
+    <Resource Include="images\bg_04.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Content Include="icons\appbar.delete.rest.png">
@@ -281,8 +281,11 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="icons\appbar.cancel.png" />
+    <Resource Include="images\back_01.png" />
+    <Resource Include="images\back_02.png" />
     <Content Include="images\drop.png" />
     <Content Include="images\h.png" />
+    <Resource Include="images\logo.png" />
     <Content Include="images\x.png" />
     <Resource Include="holidays.json" />
     <Content Include="Toolkit.Content\ApplicationBar.Cancel.png" />
