--- a/wp7-donor/Donor/Donor.csproj
+++ b/wp7-donor/Donor/Donor.csproj
@@ -133,9 +133,6 @@
     <Compile Include="ProfileLogin.xaml.cs">
       <DependentUpon>ProfileLogin.xaml</DependentUpon>
     </Compile>
-    <Compile Include="ProfilePage.xaml.cs">
-      <DependentUpon>ProfilePage.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\AppResources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -233,10 +230,6 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="ProfilePage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="StationPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -292,6 +285,9 @@
     <Resource Include="images\back_01.png" />
     <Resource Include="images\back_02.png" />
     <Resource Include="images\bg_04_white.png" />
+    <Content Include="icons\appbar.share.rest.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="images\drop.png" />
     <Content Include="images\h.png" />
     <Resource Include="images\logo.png" />
