--- a/wp7-donor/Donor/Donor.csproj
+++ b/wp7-donor/Donor/Donor.csproj
@@ -255,6 +255,11 @@
     <Content Include="Background.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="icons\ic_ApplicationBar_add.png" />
+    <Content Include="icons\ic_ApplicationBar_calendar.png" />
+    <Content Include="icons\ic_ApplicationBar_close.png" />
+    <Content Include="icons\ic_ApplicationBar_done.png" />
+    <Content Include="icons\ic_ApplicationBar_exit.png" />
     <Resource Include="images\ic_menu_ads_normal.png" />
     <Resource Include="images\ic_menu_calendar_normal.png" />
     <Resource Include="images\ic_menu_information_normal.png" />
@@ -293,6 +298,9 @@
     <Resource Include="images\logo.png" />
     <Resource Include="images\ic_star_act.png" />
     <Resource Include="images\ic_star_pas.png" />
+    <Content Include="images\ic_donated_blood.png" />
+    <Content Include="images\ic_planned_analysis.png" />
+    <Content Include="images\ic_planned_giving_blood.png" />
     <Content Include="images\x.png" />
     <Resource Include="holidays.json" />
     <Content Include="Toolkit.Content\ApplicationBar.Cancel.png" />
