--- a/wp7-donor/Donor/packages.config
+++ b/wp7-donor/Donor/packages.config
@@ -6,6 +6,7 @@
   <package id="Coding4Fun.Phone.Controls.TimeSpan" version="1.6.1" />
   <package id="Coding4Fun.Phone.Net" version="1.6.1" />
   <package id="Coding4Fun.Phone.Storage" version="1.6.1" />
+  <package id="Facebook" version="6.0.24" />
   <package id="MSPToolkit" version="1.7.26.1" />
   <package id="Newtonsoft.Json" version="4.5.9" />
   <package id="parse" version="0.4.2" />
