--- a/wp7-donor/Donor/Donor.csproj
+++ b/wp7-donor/Donor/Donor.csproj
@@ -291,6 +291,7 @@
     <Content Include="icons\ic_ApplicationBar_close.png" />
     <Content Include="icons\ic_ApplicationBar_done.png" />
     <Content Include="icons\ic_ApplicationBar_exit.png" />
+    <Content Include="images\ic_donors_act.png" />
     <Content Include="libs\GART.dll" />
     <Content Include="MS-LPL License.txt" />
     <Content Include="Toolkit.Content\ApplicationBar.Cancel.png" />
