--- a/wp7-donor/Donor/Donor.csproj
+++ b/wp7-donor/Donor/Donor.csproj
@@ -189,6 +189,7 @@
     </Compile>
     <Compile Include="ViewModels\AdsViewModel.cs" />
     <Compile Include="ViewModels\ContraViewModel.cs" />
+    <Compile Include="ViewModels\QRViewModel.cs" />
     <Compile Include="ViewModels\ReviewsViewModel.cs" />
     <Compile Include="ViewModels\EventViewModel.cs" />
     <Compile Include="ViewModels\ItemViewModel.cs" />
