--- a/BloodDonor/BloodDonor-Info.plist
+++ b/BloodDonor/BloodDonor-Info.plist
@@ -10,10 +10,10 @@
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFiles</key>
 	<array>
-		<string>57x57.png</string>
-		<string>114x114.png</string>
-		<string>Default@2x.png</string>
-		<string>Default.png</string>
+		<string>Icon.png</string>
+		<string>Icon@2x.png</string>
+		<string>Icon-72.png</string>
+		<string>Icon-72@2x.png</string>
 	</array>
 	<key>CFBundleIcons</key>
 	<dict>
@@ -21,10 +21,10 @@
 		<dict>
 			<key>CFBundleIconFiles</key>
 			<array>
-				<string>57x57.png</string>
-				<string>114x114.png</string>
-				<string>Default@2x.png</string>
-				<string>Default.png</string>
+				<string>Icon.png</string>
+				<string>Icon@2x.png</string>
+				<string>Icon-72.png</string>
+				<string>Icon-72@2x.png</string>
 			</array>
 			<key>UIPrerenderedIcon</key>
 			<true/>
