--- a/wp7-donor/Donor/packages.config
+++ b/wp7-donor/Donor/packages.config
@@ -9,9 +9,10 @@
   <package id="Facebook" version="6.0.24" />
   <package id="MSPToolkit" version="1.7.26.1" />
   <package id="MyToolkit" version="1.6.0" targetFramework="wp71" />
+  <package id="MyToolkit.Extended" version="1.6.0" targetFramework="wp71" />
   <package id="Newtonsoft.Json" version="4.5.9" />
   <package id="parse" version="0.4.2" />
   <package id="RestSharp" version="104.1" />
-  <package id="SilverlightToolkitWP" version="4.2012.6.25" />
+  <package id="SilverlightToolkitWP" version="4.2012.10.9" targetFramework="wp71" />
   <package id="WPExtensions" version="1.3.7" />
 </packages>
