--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Submodules/ShareKit"]
 	path = Submodules/ShareKit
 	url = git://github.com/ShareKit/ShareKit.git
+[submodule "Libs/MBProgressHUD"]
+	path = Libs/MBProgressHUD
+	url = https://github.com/jdg/MBProgressHUD.git
